--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: decision_stat_rfm
 Type: Package
-Title: What the package does (short line)
+Title: Right now it is rfm demo (short line)
 Version: 1.0
 Date: 2013-12-18
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Ajay Ohri,Gaurav Sehrawat
+Maintainer: Gaurav Sehrawat <igauravsehrawat@gmail.com>
+Description: Recency Frequency moentization , last time user visited , no of time user visited and how much money the user spends . Creating a list of that will have these colum
+License: MIT License
